src/test/resources/semantic_errors/return_int_mul_string.notc
void main() {
}

double fun() {
    return 2432 * "RRRRRRRRRR";
}
